Switch to Routes, Route with element prop

--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&family=VT323&display=swap');
-
 body {
   margin: 20px;
-  font-family: 'Poppins';
+  font-family: "Poppins";
   color: #333;
 }
 a {
@@ -32,7 +30,9 @@ nav h1 {
   grid-template-columns: 1fr 1fr;
   gap: 30px;
 }
-.offers, .products {
+.offers,
+.products {
   display: flex;
   gap: 20px;
 }
+
